# ChangeLog for media-plugins/live
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-plugins/live/ChangeLog,v 1.144 2012/03/21 12:01:58 ago Exp $

  21 Mar 2012; Agostino Sarubbo <ago@gentoo.org> live-2012.01.07.ebuild:
  Stable for amd64, wrt bug #408983

*live-2012.02.29 (20 Mar 2012)

  20 Mar 2012; Alexis Ballier <aballier@gentoo.org> +live-2012.02.29.ebuild:
  version bump

  20 Mar 2012; Alexis Ballier <aballier@gentoo.org> -live-2011.12.23.ebuild:
  remove old

*live-2012.01.07 (09 Jan 2012)

  09 Jan 2012; Alexis Ballier <aballier@gentoo.org> +live-2012.01.07.ebuild:
  version bump

  31 Dec 2011; Alexis Ballier <aballier@gentoo.org> -live-2011.06.16.ebuild,
  -live-2011.11.02.ebuild, -live-2011.12.02.ebuild, -live-2011.12.20.ebuild:
  remove old

*live-2011.12.23 (31 Dec 2011)

  31 Dec 2011; Alexis Ballier <aballier@gentoo.org> +live-2011.12.23.ebuild:
  version bump

*live-2011.12.20 (22 Dec 2011)

  22 Dec 2011; Alexis Ballier <aballier@gentoo.org> +live-2011.12.20.ebuild:
  version bump

*live-2011.12.02 (03 Dec 2011)

  03 Dec 2011; Alexis Ballier <aballier@gentoo.org> +live-2011.12.02.ebuild:
  version bump

*live-2011.11.02 (02 Nov 2011)

  02 Nov 2011; Alexis Ballier <aballier@gentoo.org> +live-2011.11.02.ebuild:
  version bump

  22 Jun 2011; Alexis Ballier <aballier@gentoo.org> -live-2010.10.15.ebuild,
  -live-2011.01.24.ebuild, -live-2011.03.14.ebuild, -live-2011.05.25.ebuild:
  remove old

*live-2011.06.16 (22 Jun 2011)

  22 Jun 2011; Alexis Ballier <aballier@gentoo.org> +live-2011.06.16.ebuild:
  version bump

*live-2011.05.25 (02 Jun 2011)

  02 Jun 2011; Alexis Ballier <aballier@gentoo.org> +live-2011.05.25.ebuild:
  version bump

*live-2011.03.14 (19 Apr 2011)

  19 Apr 2011; Alexis Ballier <aballier@gentoo.org> +live-2011.03.14.ebuild:
  version bump

*live-2011.01.24 (24 Jan 2011)

  24 Jan 2011; Alexis Ballier <aballier@gentoo.org> +live-2011.01.24.ebuild:
  version bump
