@@ -1,5 +1,5 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA512
+Hash: SHA1
 
 AUX config.gentoo 480 RMD160 7fe83cf6a587076b282c66f4e4d730e41b55fc27 SHA1 c26ee14495ac18d25aff20290b55181fa9245082 SHA256 f8dfcb44221ab3e1fbea958b0be5d817aaebe971129def44a96fe1cb0a7d4a00
 AUX config.gentoo-so 504 RMD160 60475939b963301f3a26416d87e53f8b08668d3e SHA1 9b829c9fe7c3a1f64a77deb5d484361c8ff8cd60 SHA256 48e623d25c0697e3274355670eae2d0d7f590502f63652bc3cf6cadbdd5429e2
@@ -7,20 +7,14 @@ AUX config.gentoo-so-r1 505 RMD160 6bd37a2fa790eb116c477a6c77f61e88a3535348 SHA1
 AUX live-recursive.patch 401 RMD160 512ee0cf4ca9139af5451be8bf7aa4321997cb03 SHA1 df84e25e5f879d93be4a71ec57c090f0d2c80f4f SHA256 353e9d709ae60a216069d39880ae1781e2037692c77ea5aca60dfb0ca1b2ae88
 DIST live.2009.06.02.tar.gz 469471 RMD160 ddbe057ac4f47d66ee7c99ec3c4886fe97f06565 SHA1 a03ac47dc1b2a5e4745e30fc304af61675036782 SHA256 66c54241bfcc7ea42fe40e1c93739be79a3c065390c4163c0f2647ac45c24758
 DIST live.2012.01.07.tar.gz 534076 RMD160 1bfbbbe4b0ee7f627aa2551657bf9f0937603147 SHA1 a89bc86d179d17c57ed98c0bb8fdaf5f101fdb70 SHA256 8f3d167959b355c571caab2ee12cf70c89f09e93484f150080a59367b35c8131
-DIST live.2012.02.29.tar.gz 538874 RMD160 949dc8b1ac8314e2d21cd99d5266898c50acb796 SHA1 a2eb6ecf88e64475ac0d936c50939859311539a4 SHA256 cedf54750639a98acade344cf7888b67b04544f2964e6300b897454fd9d8fe01
 EBUILD live-2009.06.02.ebuild 2688 RMD160 907541e56cae9099300647e741448aa51895c1ba SHA1 81899e914a1cbf97cdc0a205e8741184f0fae397 SHA256 2eb82ec8978f19a3b1ec68c66494a15c924dbad9700ce718e4407a006950b0ff
 EBUILD live-2012.01.07.ebuild 3710 RMD160 2bae27e20494b46dd021d8ba22f91d29242b8673 SHA1 4adf0291d7975ea0d2951a0659d3d642b46c07b0 SHA256 d21fec0c99760fa8e450b284929481d7b4578886434256ccd9461decd8bf4262
-EBUILD live-2012.02.29.ebuild 3716 RMD160 1584256c4e8f8d88ab6ed4c267275b9c044aaae3 SHA1 7afa62169844baa634246e0de8f685e846315cd0 SHA256 5f87f7ca4523ac727984ffbadf6e7f4717865a200152e90ce1c2adb99ccec331
-MISC ChangeLog 18154 RMD160 b6bd335cbe15343db65b675a23590cf3fb192dd8 SHA1 f10a785d208f71b8b869f9444693aa0dec71c148 SHA256 9831cc40cd1c09c7158cdf1dd64fbf48ba0c818784a2fe8a190445e3c8fc4249
+MISC ChangeLog 18401 RMD160 20cad3e03cab8059936374da0e50730184cbd985 SHA1 2cd26970de7b3786890dbc13a5aac85bdbabbf7a SHA256 526ee9cf4d17aa832b3ea344ab0caebfa26754fb84941be158d9333177f84a37
 MISC metadata.xml 225 RMD160 6e3fccd1ae62f02a0cb28d319aa185af0020822d SHA1 1b8ccc849053361ac907dc9b652796defd1ce906 SHA256 1a7f3e805478b42bc379b2a36944579d34d7e66ba5bf418a651e1cd58ad0a7f5
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.17 (GNU/Linux)
+Version: GnuPG v2.0.18 (GNU/Linux)
 
-iQEcBAEBCgAGBQJPacM7AAoJEOTDgjZ80txdQ2MIAJSd7mMoEsfY08uY18hg8X9T
-y7ZPwdS0naN03lqB3CkQfj9dskWPinZmGcklThRfhRBRRgLVuTvUMbVA601o5XqE
-GMeCosmWBxwMNA4V9Qg6KMEdk289yFxANtJOV9rrTJjYKx2JgkdBOEAst8wKRTGz
-LpAhwcSNZNXWs5uzANKkhqo57uZ1jSi6KPvt5Li1JXVhWkH4OAB8foqGlu5ji13Q
-DRJujdbq5JBQh+L2Cyzdd0nG5+72ig+Pr1DzXneVBTn5ayV5Qbdl+PdCwdVgduO4
-p1m6hfmrRnOoYPLkECZ49Az/dMvuEwj7EnWE4aXlETI7dwnt30mxl0Ha2D650FM=
-=xjsg
+iEYEARECAAYFAk9qhUMACgkQvFcC4BYPU0oKmACfQZEWtfrjh757UKy9v9jF3/Zu
+aVkAoJ5NnHcL9A7BJjUWigw3rr6VVNpC
+=oBrt
 -----END PGP SIGNATURE-----
